Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138358

QSGDefaultRectangleNode always returns invalid color

XMLWordPrintable

    • Linux/Wayland
    • 6b58ea261 (dev), b6bfb17a4 (6.10), a29d39419 (6.9)

      When creating a QSGDefaultRectangleNode using QQuickWindow::createRectangleNode(), calling color() on the resulting node always returns QColor(Invalid), even after setting a valid color using setColor().

       

      Internally, QSGDefaultRectangleNode uses a member variable m_color for the color() getter. However, this member is never updated in setColor(), which causes color() to return the default-initialized (invalid) color value, regardless of what was actually set.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            janichol Andy Nichols
            doschr Dominik Schütz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes