Fix QSGDefaultRectangleNode::color() always returning invalid

setColor() updated geometry colors but did not assign the input color
to m_color. This caused color() to always return an invalid QColor.
Fixed by assigning m_color = color in setColor().

Fixes: QTBUG-138358
Change-Id: Icb00d26e624b7437d48253a3f7ea0dd64e68baf8
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 6b58ea261f9031bbb3a849e4bebf5e01d836dfea)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit b6bfb17a468931f5309422ecb137e584cbc42bdd)